--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==4.2
 mysqlclient==2.2.0
 django-crispy-forms==2.0
+crispy-bootstrap4==2022.1
 django-filter==23.3
 Pillow==10.0.0
 python-dotenv==1.0.0
-reportlab==4.0.0 
+reportlab==4.0.0
+gunicorn==21.2.0 
