--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,8 @@ staticfiles/
 
 # OS specific files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Docker local configurations
+docker-compose.yml
+docker-compose.override.yml 
