--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 # Django Settings
-DEBUG=True
-SECRET_KEY=your_secure_secret_key_change_in_production
+DEBUG=False
+SECRET_KEY=your-very-secure-secret-key-here
+ALLOWED_HOSTS=localhost,127.0.0.1,your-domain.com
 
 # Database Settings
-DB_NAME=bibi
+DB_NAME=bibi_db
 DB_USER=bibi_user
-DB_PASSWORD=bibi_password
+DB_PASSWORD=your-strong-db-password
+DB_ROOT_PASSWORD=your-strong-root-password
 DB_HOST=db
 DB_PORT=3306
 
@@ -13,8 +15,8 @@ DB_PORT=3306
 LOAD_SAMPLE_DATA=False
 
 # Email Settings (Optional)
-EMAIL_HOST=smtp.example.com
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your-email@example.com
-EMAIL_HOST_PASSWORD=your-email-password 
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password 
