--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django==4.2
 mysqlclient==2.2.0
 django-crispy-forms==2.0
-crispy-bootstrap4==2022.1
-django-filter==23.3
+crispy-bootstrap5==0.7
 Pillow==10.0.0
-python-dotenv==1.0.0
-reportlab==4.0.0
+pycairo==1.24.0
+WeasyPrint==60.1
+django-debug-toolbar==4.2.0
+pymemcache==4.0.0
 gunicorn==21.2.0 
