--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ pycairo==1.24.0
 WeasyPrint==60.1
 django-debug-toolbar==4.2.0
 pymemcache==4.0.0
-gunicorn==21.2.0 
+gunicorn==21.2.0
+python-dotenv==1.0.0 
