--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,47 @@
+version: '3.8'
+
 services:
-  web:
-    build: 
-      context: .
-      shm_size: '2gb'
-    command: >
-      bash -c "
-        echo 'Waiting for database...' &&
-        sleep 10 &&
-        echo 'Applying database migrations...' &&
-        python manage.py migrate &&
-        echo 'Creating superuser if needed...' &&
-        python manage.py shell -c \"
-          from django.contrib.auth import get_user_model;
-          User = get_user_model();
-          if not User.objects.filter(username='admin').exists():
-              User.objects.create_superuser('admin', 'admin@example.com', 'Admin_Secure_Pass_2024', 
-                                           first_name='مدیر', last_name='سیستم', role='WAREHOUSE_MANAGER');
-              print('Superuser created successfully');
-          else:
-              print('Superuser already exists');
-        \" &&
-        echo 'Collecting static files...' &&
-        python manage.py collectstatic --noinput &&
-        echo 'Starting server...' &&
-        gunicorn bibi.wsgi:application --bind 0.0.0.0:8000 --workers 3
-      "
+  db:
+    image: postgres:13
     volumes:
-      - .:/home/app
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  web:
+    build: .
+    volumes:
+      - ./:/home/app/
       - static_volume:/home/app/static
       - media_volume:/home/app/media
     env_file:
       - ./.env
-    environment:
-      - DEBUG=${DEBUG}
-      - SECRET_KEY=${SECRET_KEY}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
     depends_on:
       - db
-    restart: always
-
-  db:
-    image: mysql:8.0
-    volumes:
-      - mysql_data:/var/lib/mysql
-    env_file:
-      - ./.env
-    environment:
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=${DB_USER}
-      - MYSQL_PASSWORD=${DB_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
-    restart: always
-    ports:
-      - "3306:3306"
+    expose:
+      - 8000
 
   nginx:
     image: nginx:1.21
-    ports:
-      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/home/app/static
       - media_volume:/home/app/media
+    ports:
+      - "80:80"
     depends_on:
       - web
-    restart: always
 
 volumes:
-  mysql_data:
+  postgres_data:
   static_volume:
   media_volume: 
