--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,11 @@ services:
     image: mysql:8.0.32
     volumes:
       - mysql_data:/var/lib/mysql
-    env_file:
-      - ./.env
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=Root_Super_Secure_2024_DB
+      - MYSQL_DATABASE=bibi_db
+      - MYSQL_USER=bibi_user
+      - MYSQL_PASSWORD=Root_Super_Secure_2024_DB
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
@@ -25,8 +23,16 @@ services:
       - ./:/home/app/
       - static_volume:/home/app/static
       - media_volume:/home/app/media
-    env_file:
-      - ./.env
+    environment:
+      - DEBUG=False
+      - SECRET_KEY=django-secure-key-98765-zxcvbnm-qwerty-12345
+      - ALLOWED_HOSTS=localhost,127.0.0.1,example.com,www.example.com
+      - DB_NAME=bibi_db
+      - DB_USER=bibi_user
+      - DB_PASSWORD=Root_Super_Secure_2024_DB
+      - DB_HOST=db
+      - DB_PORT=3306
+      - LOAD_SAMPLE_DATA=True
     depends_on:
       - db
     expose:
