--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:8.0.32
+    image: mysql:8.0.42
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
@@ -16,6 +16,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - bibi_network
 
   web:
     build: .
@@ -37,6 +39,8 @@ services:
       - db
     expose:
       - 8000
+    networks:
+      - bibi_network
 
   nginx:
     image: nginx:1.21
@@ -48,6 +52,12 @@ services:
       - "80:80"
     depends_on:
       - web
+    networks:
+      - bibi_network
+
+networks:
+  bibi_network:
+    driver: bridge
 
 volumes:
   mysql_data:
