--- a/pip.conf
+++ b/pip.conf
@@ -1,6 +1,8 @@
 [global]
-timeout = 120
-index-url = https://pypi.org/simple
-trusted-host = pypi.org files.pythonhosted.org
-default-timeout = 120
-retries = 5 
+timeout = 300
+index-url = https://pypi.iranserver.com/simple/
+trusted-host = pypi.iranserver.com
+
+[install]
+retries = 5
+timeout = 300 
