--- a/pip.conf
+++ b/pip.conf
@@ -1,7 +1,7 @@
 [global]
 timeout = 300
-index-url = https://pypi.iranserver.com/simple/
-trusted-host = pypi.iranserver.com
+index-url = https://pypi.org/simple
+trusted-host = pypi.org files.pythonhosted.org
 
 [install]
 retries = 5
