--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,29 @@
 # Django Settings
-DEBUG=False
-SECRET_KEY=your-very-secure-secret-key-here
-ALLOWED_HOSTS=localhost,127.0.0.1,your-domain.com
+DEBUG=0
+SECRET_KEY=change_me_in_production
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 # Database Settings
-DB_NAME=bibi_db
-DB_USER=bibi_user
-DB_PASSWORD=your-strong-db-password
-DB_ROOT_PASSWORD=your-strong-root-password
-DB_HOST=db
-DB_PORT=3306
+DATABASE_ENGINE=django.db.backends.postgresql
+DATABASE_NAME=bibi_db
+DATABASE_USER=bibi_user
+DATABASE_PASSWORD=bibi_password
+DATABASE_HOST=db
+DATABASE_PORT=5432
+
+# Static and Media files
+STATIC_URL=/static/
+STATIC_ROOT=/home/app/static/
+MEDIA_URL=/media/
+MEDIA_ROOT=/home/app/media/
+
+# Email Settings
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=1
+EMAIL_HOST_USER=your_email@example.com
+EMAIL_HOST_PASSWORD=your_email_password
 
 # Sample Data Loading
 LOAD_SAMPLE_DATA=False
@@ -19,4 +33,9 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-app-password 
+EMAIL_HOST_PASSWORD=your-app-password
+
+# Superuser settings
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=admin_password 
