--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,21 @@
-# Django Settings
+# Database settings for MySQL
+MYSQL_DATABASE=bibi_db
+MYSQL_USER=bibi_user
+MYSQL_PASSWORD=bibi_password
+MYSQL_ROOT_PASSWORD=root_password
+
+# Django settings
 DEBUG=0
 SECRET_KEY=change_me_in_production
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
-# Database Settings
-DATABASE_ENGINE=django.db.backends.postgresql
+# Database connection for Django
+DATABASE_ENGINE=django.db.backends.mysql
 DATABASE_NAME=bibi_db
 DATABASE_USER=bibi_user
 DATABASE_PASSWORD=bibi_password
 DATABASE_HOST=db
-DATABASE_PORT=5432
+DATABASE_PORT=3306
 
 # Static and Media files
 STATIC_URL=/static/
@@ -25,7 +31,12 @@ EMAIL_USE_TLS=1
 EMAIL_HOST_USER=your_email@example.com
 EMAIL_HOST_PASSWORD=your_email_password
 
-# Sample Data Loading
+# Superuser settings
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=admin_password
+
+# Sample data
 LOAD_SAMPLE_DATA=False
 
 # Email Settings (Optional)
@@ -33,9 +44,4 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-app-password
-
-# Superuser settings
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_EMAIL=admin@example.com
-DJANGO_SUPERUSER_PASSWORD=admin_password 
+EMAIL_HOST_PASSWORD=your-app-password 
