--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
-# Database settings for MySQL
+# Database settings for MySQL container
 MYSQL_DATABASE=bibi_db
 MYSQL_USER=bibi_user
 MYSQL_PASSWORD=bibi_password
 MYSQL_ROOT_PASSWORD=root_password
 
-# Django settings
-DEBUG=0
-SECRET_KEY=change_me_in_production
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-
-# Database connection for Django
+# Database connection settings for Django
 DATABASE_ENGINE=django.db.backends.mysql
 DATABASE_NAME=bibi_db
 DATABASE_USER=bibi_user
 DATABASE_PASSWORD=bibi_password
 DATABASE_HOST=db
 DATABASE_PORT=3306
+
+# Django settings
+DEBUG=0
+SECRET_KEY=change_me_in_production
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 # Static and Media files
 STATIC_URL=/static/
