--- a/nginx.conf
+++ b/nginx.conf
@@ -7,19 +7,37 @@ server {
     server_name localhost;
     client_max_body_size 10M;
 
+    # استاتیک فایل‌ها
     location /static/ {
         alias /home/app/static/;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+        access_log off;
     }
 
+    # مدیا فایل‌ها
     location /media/ {
         alias /home/app/media/;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+        access_log off;
     }
 
+    # فیو‌یکون
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+        alias /home/app/static/img/favicon.ico;
+    }
+
+    # تمام درخواست‌های دیگر
     location / {
         proxy_pass http://web;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
     }
 } 
