--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: always
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     env_file:
       - .env
     networks:
@@ -21,7 +22,8 @@ services:
     build: .
     restart: always
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - static_volume:/home/app/static
       - media_volume:/home/app/media
