--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - static_volume:/home/app/static
       - media_volume:/home/app/media
+      - ./static:/home/app/web/static
     env_file:
       - .env
     networks:
