--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ upstream web {
 
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost 127.0.0.1 93.118.119.250;
     client_max_body_size 10M;
 
     # استاتیک فایل‌ها
