--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,7 @@ services:
     image: nginx:1.23
     container_name: bibi_nginx
     restart: always
-    ports:
-      - "0.0.0.0:80:80"
+    network_mode: "host"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/home/app/static
@@ -49,6 +48,7 @@ services:
 
 networks:
   bibi_network:
+    driver: bridge
 
 volumes:
   mysql_data:
