--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,12 @@
 upstream web {
-    server web:8000;
+    server localhost:8000;
 }
 
 server {
-    listen 80;
-    server_name localhost 127.0.0.1 93.118.119.250;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;  # پذیرش همه درخواست‌ها از هر نامی
+
     client_max_body_size 10M;
 
     # استاتیک فایل‌ها
