--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,13 +36,16 @@ services:
     image: nginx:1.23
     container_name: bibi_nginx
     restart: always
-    network_mode: "host"
+    ports:
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/home/app/static
       - media_volume:/home/app/media
     depends_on:
       - web
+    networks:
+      - bibi_network
 
 networks:
   bibi_network:
