--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server {
     listen 80;
     
+    # افزایش سایز بافر هدر برای رفع خطای 400
+    client_max_body_size 10M;
+    large_client_header_buffers 4 16k;
+    
     location /static/ {
         alias /home/app/static/;
     }
@@ -11,7 +15,12 @@ server {
 
     location / {
         proxy_pass http://web:8000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 } 
