--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     build: .
     container_name: bibi_web
     restart: always
+    ports:
+      - "8888:8000"
     depends_on:
       db:
         condition: service_healthy
