--- a/nginx.conf
+++ b/nginx.conf
@@ -1,45 +1,18 @@
-upstream web {
-    server web:8000;
-}
-
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _
-
-    client_max_body_size 10M;
-
+    listen 80;
+    server_name _;
 
     location /static/ {
         alias /home/app/static/;
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-        access_log off;
     }
-
 
     location /media/ {
         alias /home/app/media/;
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-        access_log off;
     }
 
-
-    location = /favicon.ico {
-        access_log off;
-        log_not_found off;
-        alias /home/app/static/img/favicon.ico;
-    }
-
-    
     location / {
-        proxy_pass http://web;
+        proxy_pass http://bibi_web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 300s;
-        proxy_read_timeout 300s;
     }
-} 
+}
